# hamza

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  makefile  requirements.txt
.github/workflows/: cmake.yml
commands/: audio.json  create.json  lights.json  open.json
facerecognition/: encodings.pickle  facial_req.py  headshots.py
inc/: assimilate.hpp  child.hpp  command.hpp  commands.hpp  config.hpp  database.hpp  execute.hpp  hamza.hpp
lib/std-k/: std-k.cpp  std-k.hpp
python/facerecognition/: facial_req.py
src/: assimilate.cpp  child.cpp  commands.cpp  database.cpp  execute.cpp  hamza.cpp
